# ConfigParserEnhanced

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .style.yapf  CHANGELOG.md  CONTRIBUTING.md  ConfigParserEnhanced.wpr  ConfigparserEnhanced.wpr  LICENSE  LICENSE.md  LICENSE.txt  README.md  clean.sh  example.py  exec-autoformat.sh  exec-clean.sh  exec-example-ConfigParserEnhanced.py  exec-example-SetEnvironment.py  exec-example.py  exec-makedist.sh  exec-makedoc.sh  exec-reformat.sh  exec-reqs-install.sh  exec-reqs-uninstall.sh  exec-tests.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  setup.py.old  test.sh
doc/: make_html_docs.sh  (+1 more)
wip/determinesystem/: .gitlab-ci.yml  README.md  determine_system.py  pyproject.toml  requirements.txt
wip/determinesystem/determinesystem/: DetermineSystem.py  __init__.py  version.py
wip/determinesystem/doc/: make_html_docs.sh
wip/determinesystem/doc/source/: DetermineSystem.rst  conf.py  index.rst
wip/determinesystem/tests/: conftest.py  test_determine_system.py  test_supported_systems.ini
wip/loadenv/: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  README.md  atdm_keyword_parser.py  configparserenhanced  get_dependencies.sh  install_reqs.sh  keyword_parser.py  keywordparser  load-env.sh  load_env.py  pyproject.toml  pytest.ini  requirements.txt  setenvironment
wip/loadenv/doc/: make_html_docs.sh
wip/loadenv/doc/source/: EnvKeywordParser.rst  LoadEnv.rst  conf.py  index.rst
wip/loadenv/examples/: environment-specs.ini  supported-envs.ini  supported-systems.ini
wip/loadenv/examples/atdm/: environment-specs.ini  supported-envs.ini  supported-systems.ini
wip/loadenv/examples/trilinos/: environment-specs.ini  supported-envs.ini  supported-systems.ini
wip/loadenv/ini_files/: .gitignore  README.md  environment-specs.ini  supported-envs.ini  supported-systems.ini
wip/loadenv/ini_files/trilinos/: environment-specs.ini  supported-envs.ini  supported-systems.ini
wip/loadenv/loadenv/: EnvKeywordParser.py  LoadEnv.py  __init__.py  __main__.py  load-env.ini  load-env.sh  load_env.py  version.py
wip/loadenv/loadenv/tests/: conftest.py  test_integration_load_env.py  test_unit_env_keyword_parser.py  test_unit_load_env.py
wip/loadenv/loadenv/unittests/: conftest.py  test_all.py  test_integration_load_env.py  test_unit_env_keyword_parser.py  test_unit_load_env.py
wip/loadenv/loadenv/unittests/modulefiles/: README.md
wip/loadenv/loadenv/unittests/modulefiles/sparc-dev/: cuda-10.1.243_gcc-7.2.0_openmpi-4.0.3
wip/loadenv/loadenv/unittests/supporting_files/: test_environment_specs.ini  test_load_env.ini  test_supported_envs.ini  test_supported_systems.ini
wip/loadenv/src/: env_keyword_parser.py  load-env.ini  load-env.sh  load_env_common.py
wip/loadenv/tests/: conftest.py  test_atdm_keyword_parser.py  test_integration_load_env.py  test_keyword_parser.py  test_unit_env_keyword_parser.py  test_unit_load_env.py
wip/loadenv/tests/supporting_files/: test_environment_specs.ini  test_load_env.ini  test_supported_envs.ini  test_supported_systems.ini
wip/setenvironment/: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SetEnvironment.wpr  exec-clean.sh  exec-example-SetEnvironment.py  exec-makedoc.sh  exec-reformat.sh  exec-reqs-install.sh  exec-reqs-uninstall.sh  exec-tests.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  setup.py.old
wip/setenvironment/doc/: make_html_docs.sh
wip/setenvironment/doc/source/: ModuleHelper.rst  SetEnvironment.rst  conf.py  index.rst  tbl_setenvironment_commands.csv
wip/setenvironment/doc/source/_static/css/: custom.css
wip/setenvironment/examples/: example-01.ini  example-01.py
wip/setenvironment/examples/modulefiles/: README.md
wip/setenvironment/examples/modulefiles/boost/: .version  1.75.0
wip/setenvironment/examples/modulefiles/gcc/: 4.8.4
wip/setenvironment/examples/modulefiles/python/: .version  3.9.0
wip/setenvironment/examples/modulefiles/sems-gcc/: .version  7.3.0
wip/setenvironment/scripts/: common.bash
wip/setenvironment/setenvironment/: ModuleHelper.py  SetEnvironment.py  __init__.py  version.py
wip/setenvironment/setenvironment/unittests/: _apply_configuration_nohdr_truth.py  _apply_configuration_nohdr_truth.sh  _apply_configuration_truth.py  _apply_configuration_truth.sh  common.py  config_test_setenvironment.ini  test_ModuleHelper.py  test_SetEnvironment.py
wip/setenvironment/setenvironment/unittests/files/: _ane-bash-inc_hdr-inc_body-inc_shbng.sh  _ane-python-inc_hdr-inc_body-inc_shbng.py  _config-bash-exc_hdr-inc_body-exc_shbng.sh  _config-bash-exc_hdr-inc_body-inc_shbng.sh  _config-bash-inc_hdr-exc_body-exc_shbng.sh  _config-bash-inc_hdr-exc_body-inc_shbng.sh  _config-bash-inc_hdr-inc_body-exc_shbng.sh  _config-bash-inc_hdr-inc_body-inc_shbng.sh  _config-python-exc_hdr-inc_body-exc_shbng.py  _config-python-exc_hdr-inc_body-inc_shbng.py  _config-python-inc_hdr-exc_body-exc_shbng.py  _config-python-inc_hdr-exc_body-inc_shbng.py  _config-python-inc_hdr-inc_body-exc_shbng.py  _config-python-inc_hdr-inc_body-inc_shbng.py  _sie-bash-inc_hdr-inc_body-inc_shbng.sh  _sie-python-inc_hdr-inc_body-inc_shbng.py
wip/setenvironment/setenvironment/unittests/modulefiles/boost/: 1.10.1
wip/setenvironment/setenvironment/unittests/modulefiles/gcc/: 10.2.0  7.3.0
wip/setenvironment/setenvironment/unittests/modulefiles/python/: 3.5.3  3.9.2
wip/setenvironment/setenvironment/unittests/modulefiles/sems-gcc/: 4.8.4  7.3.0
wip/setenvironment/src/setenvironment/: ModuleHelper.py  SetEnvironment.py  __init__.py  version.py
wip/setenvironment/src/setenvironment/unittests/: common.py  config_test_setenvironment.ini  test_ModuleHelper.py  test_SetEnvironment.py  update_truth_files.sh
wip/setenvironment/src/setenvironment/unittests/files/: _ane-bash-inc_hdr-inc_body-inc_shbng.sh  _ane-python-inc_hdr-inc_body-inc_shbng.py  _config-bash-exc_hdr-inc_body-exc_shbng.sh  _config-bash-exc_hdr-inc_body-inc_shbng.sh  _config-bash-inc_hdr-exc_body-exc_shbng.sh  (+12 more)
(+147 files in other folders)
