[tool.poetry]
name = "configparserenhanced"
version = "0.8.0"
license = "LICENSE.md"
readme = "README.md"
keywords = []
repository = "https://gitlab-ex.sandia.gov/trilinos-devops-consolidation/code/ConfigParserEnhanced"
description = "A .ini file processing tool that extends configparser to add processing triggers to options."
documentation = "http://10.202.35.89:8080/ConfigParserEnhanced/doc/index.html"
authors = [
    "William McLendon <wcmclen@sandia.gov>",
    "Jason M. Gates <jmgate@sandia.gov>"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: DevOps',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]
packages = [
    { include = 'configparserenhanced', from = 'src' },
]
# include = [ "CHANGELOG.md" ]


[tool.poetry.urls]
CI = "https://gitlab-ex.sandia.gov/trilinos-devops-consolidation/code/ConfigParserEnhanced/-/pipelines"
Issues = "https://gitlab-ex.sandia.gov/trilinos-devops-consolidation/code/ConfigParserEnhanced/-/issues"


[tool.poetry.dependencies]
python = "^3.6"
# configparser = "^5.0"


[tool.poetry.dev-dependencies]
mock = "^4.0"
pytest = "^6.2"
pytest-cov = "^2.11"
Sphinx = "^3.5"
sphinx-argparse = "^0.2"
sphinx-rtd-theme = "^0.5"


[tool.pycodestyle]
statistics = true


[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"


