[tool.poetry]
name = "configparserenhanced"
description = "A tool that extends configparser to enable enhanced processing of .ini files."
version = "0.8.1.1"
license = "LICENSE"
readme = "README.md"
keywords = [
    "Utility",
    "Bash",
    "Configuration",
    "ConfigParserEnhanced",
    "ConfigParser"
]
repository = "https://github.com/sandialabs/ConfigParserEnhanced"
documentation = "https://configparserenhanced.readthedocs.io/en/latest/"
authors = [
    "William McLendon <wcmclen@sandia.gov>",
]
maintainers = [
    "Sandia National Laboratories <wg-ConfigParserEnhanced@sandia.gov>",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Other Audience',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: BSD License',
]
packages = [
    { include = 'configparserenhanced', from = 'src' },
]
include = [ "CHANGELOG.md" ]


[tool.poetry.urls]
CI     = "https://github.com/sandialabs/ConfigParserEnhanced/actions/workflows/test-driver-core.yml"
Issues = "https://github.com/sandialabs/ConfigParserEnhanced/issues"


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
mock = "^4.0"
pytest = "^6.2"
pytest-cov = "^2.11"
Sphinx = "^3.5"
sphinx-argparse = "^0.2"
sphinx-rtd-theme = "^0.5"


[tool.pycodestyle]
statistics = true


[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"


